--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,9 +18,9 @@ code {
   width: 96%;
   background-color: whitesmoke;
   position: absolute;
-  left: 0;
   top: 100%;
   height:0vh;
+  transition: .5s;
 }
 .showDropDown{
   width: 96%;
@@ -28,7 +28,24 @@ code {
   position: absolute;
   display: block;
   top: 100%;
-  height:60vh;
+  height:80vh;
   font-size: 100px;
   transition: .5s;
+}
+.hideItems{
+  /* width: 96%; */
+  background-color: whitesmoke;
+  position: absolute;
+  opacity: 0;
+  left: 50%;
+  transform: translateY(-5vh) translateX(-50%);
+  top: 150%;
+  pointer-events: none;
+}
+.showItems{
+  left: 50%;
+  transform: translateY(0) translateX(-50%);
+  opacity: 100%;
+  transition: 1s;
+  pointer-events: none;
 }
